- add missing jars in polymap_container - start_linux.sh: default port 8080